--- a/my-app/src/navbar.css
+++ b/my-app/src/navbar.css
@@ -1,35 +1,67 @@
 body{
     margin:0;
     padding:0;
+   
+}
+.title{
+  cursor: pointer;
+  font-size: .7em;
+  /* font-family: 'Caprasimo', cursive; */
 }
 .navbar-container{
-    background: rgb(80, 41, 80);
-    font-size: 3em;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-   padding: 1.5rem 0;
+  
+  /* background: #010001; */
+    font-size: 2.5em;
+    position: sticky;
+    top: 10px;
+    scroll-behavior: smooth;
+    z-index: 1;
+   font-family: 'Caprasimo', cursive;
+   background: rgba(0, 0, 0, 0.5);
 }
-.navbar-container-dark{
-    background: #030405;
-    color: #c1d4e5;
-    font-size: 3em;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-   padding: 1.5rem 0;
+
+.navbar-elements-container{
+  width:50%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto;
+ 
+ 
+  border-radius: 50px;
+  
 }
+
+  
+ 
 p{
-    color: rgb(133, 101, 101);
-    font-weight: 800;
-    margin: 0;
-   
+    font-weight: 1000; 
+}
+.navbar-input{
+  width:40%;
+  height: 3em;
+ border: none;
+  background: rgb(59,59,59);
+  border-radius: 15px;
+}
+.navbar-input:focus{
+  outline: none;
+}
+.navbar-input:hover{
+  background: #ffffff;
+}
+.navbar-input::after{
+  border: none;
+}
+.item-container{
+  display: flex;
+  align-items: center;
 }
 .switch {
     position: relative;
     display: flex;
     width: 60px;
-    height: 34px;
+    height: 20px;
   }
   
   /* Hide default HTML checkbox */
@@ -54,11 +86,11 @@ p{
   .slider:before {
     position: absolute;
     content: "";
-    height: 26px;
-    width: 26px;
+    height: 16px;
+    width: 16px;
     left: 4px;
     bottom: 4px;
-    background-color: rgb(133, 101, 101);
+    background-color: rgb(59,59,59);
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -88,6 +120,38 @@ p{
   .slider.round:before {
     border-radius: 50%;
   }
+  .navbar-list{
+    margin-right: 3rem;
+  }
   
+  ul,li{
+    display: flex; 
+  }
+  
+  a{
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1.3rem;
+    margin:0 .8em;
+    font-weight: 500;
+  }
+  .navbar-a:hover{
+      color: rgb(72, 71, 71); 
+  }
+ /* .searchresult-container{
+  display: grid;
+  grid-template-columns: auto  auto auto ;
+  column-gap: 20px;
+  row-gap: 20px;
+  margin-right: 2em;
+  padding: 2em;
+  margin-bottom: .5em;
+ 
+ }
+ .result-image{
+  max-width: 100%;
+  border-radius: 20px;
+ } */
+ 
   
 
